--- a/index.css
+++ b/index.css
@@ -440,6 +440,13 @@ input[type=number]::-webkit-outer-spin-button {
     padding: none;
 }
 
+.function_box_input_evaluated{
+    position: fixed;
+    right: 7%;
+    transform: translateY(-50%);
+    opacity: 25%;
+}
+
 .function_box_input:focus {
     outline-width: 0;
     box-shadow: 0px 2px white;
