--- a/index.css
+++ b/index.css
@@ -1,4 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@font-face {
+    font-family: "Space Grotesk";
+    src: url(./media/SpaceGrotesk.woff2);
+}
+@font-face {
+    font-family: "number";
+    src: local("Times New Roman");
+    unicode-range: U+30-39,U+2150-218F;
+}
+@font-face {
+    font-family: "latinModern";
+    src: url(./media/cmunui.woff2);
+    unicode-range: U+20-2F,U+3A-7E;
+}
+
+
 
 :root {
     --midnight: #505c63a5;
@@ -239,7 +254,7 @@
 
 
 .funcInput {
-    font-family: "Computer Modern Serif";
+    font-family: number,latinModern,sans-serif;
     width: 100%;
     height: 3.5vh;
     font-size: 18px;
@@ -276,7 +291,7 @@
 }
 
 .axisInput {
-    font-family: "Computer Modern Serif";
+    font-family: "latinModern";
     width: 10vh;
     height: 3.5vh;
     font-size: 18px;
@@ -325,7 +340,7 @@
 }
 
 .numInp {
-    font-family: "Computer Modern Serif" !important;
+    font-family: "latinModern" !important;
     width: 5vh;
     height: 2vh !important;
     font-size: 18px !important;
@@ -428,7 +443,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .function_box_text_input {
-    font-family: "Computer Modern Serif";
+    font-family: number,latinModern;
     width: 100%;
     height: 3.5vh;
     font-size: 18px;
@@ -497,7 +512,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .function_box_slider_input{
-    font-family: "Computer Modern Serif" ;
+    font-family: "latinModern" ;
     width: 5vh;
     height: 2vh ;
     font-size: 18px ;
