--- a/index.css
+++ b/index.css
@@ -2,25 +2,25 @@
     font-family: "Space Grotesk";
     src: url(./media/SpaceGrotesk.woff2);
 }
+
 @font-face {
     font-family: "number";
     src: local("Times New Roman");
-    unicode-range: U+30-39,U+2150-218F;
+    unicode-range: U+30-39, U+2150-218F;
 }
+
 @font-face {
     font-family: "latinModern";
     src: url(./media/cmunui.woff2);
-    unicode-range: U+20-2F,U+3A-7E;
+    unicode-range: U+20-2F, U+3A-7E;
 }
-
-
 
 :root {
     --midnight: #717e85a5;
     --midnightX: #505c63a5;
     --sunset: #e68269ac;
-    --beige: #ECCEAE;
-    --creme: #FBF6E2;
+    --beige: #ecceae;
+    --creme: #fbf6e2;
 
     --crystal: #505c63a5;
     --sunlight: #f4f9ff;
@@ -37,7 +37,7 @@
 
 #frameTime {
     font-family: "Space Grotesk";
-    font-size: .8em;
+    font-size: 0.8em;
     position: absolute;
     top: 0;
     padding-left: 4px;
@@ -51,7 +51,6 @@
     left: -2.5vh;
     top: 50%;
     transform: translateY(-50%);
-
 }
 
 #hiddenHider {
@@ -63,14 +62,13 @@
 }
 
 #hider::before {
-
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    border-radius: 5rem  0 0 5rem;
+    border-radius: 5rem 0 0 5rem;
 
     background-color: var(--midnight);
     -webkit-backdrop-filter: blur(10px);
@@ -79,7 +77,7 @@
 }
 
 #menu::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -130,23 +128,29 @@
     width: 100%;
 }
 
-details
-{
+details {
     transition: height 0.5s ease;
     overflow: hidden;
 }
 
-details:not([open])
-{
+details:not([open]) {
     height: 1.25em;
 }
 
-details[open]
-{
+details[open] {
     height: 50vh;
 }
+
+summary {
+    list-style-type: "⛭ ";
+}
+
+details[open]>summary {
+    list-style-type: "⚙ ";
+}
+
 #sliders::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -155,7 +159,7 @@ details[open]
     border-radius: 20px;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    background-color: var(--midnight); 
+    background-color: var(--midnight);
     z-index: -10;
     margin-bottom: 6vh;
 }
@@ -208,7 +212,7 @@ details[open]
 }
 
 #hider2::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -240,9 +244,9 @@ details[open]
 #slice::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 25px; 
-    height: 25px; 
-    background: #131842; 
+    width: 25px;
+    height: 25px;
+    background: #131842;
     border-radius: 100px;
     border: var(--sunlight);
     border-style: solid;
@@ -273,9 +277,8 @@ details[open]
     margin-top: 1vh;
 }
 
-
 .funcInput {
-    font-family: number,latinModern,sans-serif;
+    font-family: number, latinModern, sans-serif;
     width: 100%;
     height: 3.5vh;
     font-size: 18px;
@@ -383,8 +386,8 @@ input[type="number"] {
     appearance: textfield;
 }
 
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
 }
 
@@ -392,7 +395,6 @@ input[type=number]::-webkit-outer-spin-button {
     outline-width: 0;
     box-shadow: 0px 2px white;
 }
-
 
 .number-input {
     display: inline-flex;
@@ -423,7 +425,7 @@ input[type=number]::-webkit-outer-spin-button {
 .number-input button:after {
     display: inline-block;
     position: absolute;
-    content: '';
+    content: "";
     width: 1rem;
     height: 2px;
     background-color: #f4f9ff;
@@ -434,10 +436,10 @@ input[type=number]::-webkit-outer-spin-button {
     transform: translate(-50%, -50%) rotate(90deg);
 }
 
-.number-input input[type=number] {
+.number-input input[type="number"] {
     font-family: "Space Grotesk";
     max-width: 5rem;
-    padding: .5rem;
+    padding: 0.5rem;
     border: solid #ddd;
     border-width: 0 2px;
     font-size: 2rem;
@@ -445,10 +447,9 @@ input[type=number]::-webkit-outer-spin-button {
     text-align: center;
 }
 
-
 /*--------------------------------------------------------------*/
 
-#inputs{
+#inputs {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -466,7 +467,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .function_box_text_input {
-    font-family: number,latinModern;
+    font-family: number, latinModern;
     width: 100%;
     height: 3.5vh;
     font-size: 18px;
@@ -478,7 +479,7 @@ input[type=number]::-webkit-outer-spin-button {
     padding: none;
 }
 
-.function_box_input_evaluated{
+.function_box_input_evaluated {
     position: fixed;
     right: 7%;
     transform: translateY(-50%);
@@ -495,7 +496,7 @@ input[type=number]::-webkit-outer-spin-button {
     display: flex;
 }
 
-.function_box_slider{
+.function_box_slider {
     appearance: none;
     outline: none;
     flex-grow: 1;
@@ -534,24 +535,24 @@ input[type=number]::-webkit-outer-spin-button {
     cursor: pointer;
 }
 
-.function_box_slider_input{
-    font-family: "latinModern" ;
+.function_box_slider_input {
+    font-family: "latinModern";
     width: 5vh;
-    height: 2vh ;
-    font-size: 18px ;
+    height: 2vh;
+    font-size: 18px;
     background: var(--midnightX);
     color: #f4f9ff;
     border-radius: 5px;
-    border: none ;
-    border-width: 2px ;
-    text-align: center ;
+    border: none;
+    border-width: 2px;
+    text-align: center;
     margin: 3px;
 }
 
-.function_box_slider_input.left{
+.function_box_slider_input.left {
     justify-self: left;
 }
 
-.function_box_slider_input.right{
+.function_box_slider_input.right {
     justify-self: right;
 }
